--- a/main.html
+++ b/main.html
@@ -7,7 +7,19 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Login Form</h1>
+	<form id="form">
+		<input type="text" id="username" placeholder="Username"><br>
+		<br>
+		<input type="password" id="password" placeholder="Password"><br>
+		<br>
+		<input type="checkbox" id="checkbox">
+		<label for="checkbox">Remember me</label><br>
+		<br>
+		<button type="submit" id="submit" value="Submit">Submit</button>
+		<button type="button" id="existing">Login as existing user</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
