--- a/main.html
+++ b/main.html
@@ -9,8 +9,10 @@
 <body>
 	<h1>Login Form</h1>
 	<form id="form">
+		<label for="username"></label>
 		<input type="text" id="username" placeholder="Username"><br>
 		<br>
+		<label for="password"></label>
 		<input type="password" id="password" placeholder="Password"><br>
 		<br>
 		<input type="checkbox" id="checkbox">
