--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
 	<h1>Login Form</h1>
 	<form id="form">
-		<label for="username"></label>
+		<label for="username">Username:</label>
 		<input type="text" id="username" placeholder="Username"><br>
 		<br>
-		<label for="password"></label>
+		<label for="password">Password:</label>
 		<input type="password" id="password" placeholder="Password"><br>
 		<br>
 		<input type="checkbox" id="checkbox">
