--- a/main.html
+++ b/main.html
@@ -8,18 +8,18 @@
 
 <body>
 	<h1>Login Form</h1>
-	<form id="form">
+	<form>
 		<label for="username">Username:</label>
 		<input type="text" id="username" placeholder="Username"><br>
 		<br>
 		<label for="password">Password:</label>
 		<input type="password" id="password" placeholder="Password"><br>
 		<br>
-		<input type="checkbox" id="checkbox">
-		<label for="checkbox">Remember me</label><br>
+		<label for="checkbox">Remember me:</label>
+		<input type="checkbox" id="checkbox"><br>
 		<br>
 		<button type="submit" id="submit" value="Submit">Submit</button>
-		<button type="button" id="existing">Login as existing user</button>
+		<button type="button" id="existing" style="display: none">Login as existing user</button>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
