--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<label for="checkbox">Remember me:</label>
 		<input type="checkbox" id="checkbox"><br>
 		<br>
-		<button type="submit" id="submit" value="Submit">Submit</button>
+		<button type="submit" id="submit">Submit</button>
 		<button type="button" id="existing" style="display: none">Login as existing user</button>
 		
 	</form>
